k8s/application/deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: fiber-fx-deployment
spec:
  replicas: 4
  template:
    metadata:
      labels:
        app: fiber-fx
    spec:
      containers:
        - name: fiber-fx
          image: fiber-fx
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "10m"
              memory: "256Mi"
            limits:
              cpu: "20m"
              memory: "512Mi"
  strategy:
    canary:
      canaryService: canary-fiber-fx-svc  # required
      stableService: stable-fiber-fx-svc  # required
      trafficRouting:
        istio:
          virtualService: 
            name: fiber-fx-vsvc.istio-system   # required
            routes:
            - primary
      steps:
        - setWeight: 10
        - pause:
            duration: 1m
        - setWeight: 20
        - pause:
            duration: 1m
        - setWeight: 40
        - pause:
            duration: 1m
        - setWeight: 60
        - pause:
            duration: 1m
        - setWeight: 80
        - pause:
            duration: 1m
  selector:
    matchLabels:
      app: fiber-fx
