k8s/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-fiber-fx
spec:
  ports:
    - name: http-fiber-fx
      port: 9090
      targetPort: 8080
  selector:
    app: fiber-fx
