k8s/application/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fiber-fx-gateway
  # namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fiber-fx-vsvc
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - fiber-fx-gateway
  http:
    - name: primary
      route:
      - destination:
          host: stable-fiber-fx-svc.fiber-fx # referenced in canary.stableService
          port:
            number: 9090
        weight: 100
      - destination:
          host: canary-fiber-fx-svc.fiber-fx # referenced in canary.canaryService
          port:
            number: 9090
        weight: 0
